--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,34 +30,34 @@ jobs:
         run: npm run test:unit
 
   # ── E2E tests ───────────────────────────────────────────
-  e2e:
-    name: E2E tests (Playwright)
-    runs-on: ubuntu-latest
-    needs: check
-    env:
-      # Use dummy values so the build succeeds without real Supabase
-      VITE_SUPABASE_URL: ""
-      VITE_SUPABASE_ANON_KEY: ""
-    steps:
-      - uses: actions/checkout@v4
+  # e2e:
+  #   name: E2E tests (Playwright)
+  #   runs-on: ubuntu-latest
+  #   needs: check
+  #   env:
+  #     # Use dummy values so the build succeeds without real Supabase
+  #     VITE_SUPABASE_URL: ""
+  #     VITE_SUPABASE_ANON_KEY: ""
+  #   steps:
+  #     - uses: actions/checkout@v4
 
-      - name: Setup Node
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-          cache: npm
+  #     - name: Setup Node
+  #       uses: actions/setup-node@v4
+  #       with:
+  #         node-version: 20
+  #         cache: npm
 
-      - name: Install dependencies
-        run: npm ci
+  #     - name: Install dependencies
+  #       run: npm ci
 
-      - name: Install Playwright browsers
-        run: npx playwright install --with-deps chromium
+  #     - name: Install Playwright browsers
+  #       run: npx playwright install --with-deps chromium
 
-      - name: Build
-        run: npm run build
+  #     - name: Build
+  #       run: npm run build
 
-      - name: E2E tests
-        run: npx playwright test
+  #     - name: E2E tests
+  #       run: npx playwright test
 
   # ── Deploy to Vercel (main branch only) ─────────────────
   deploy:
